<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/fondo"
    tools:context=".vistaConfiguracionFragment">


    <ImageView
        android:layout_width="308dp"
        android:layout_height="314dp"
        android:layout_marginStart="50sp"
        android:src="@drawable/ic_vistaconfig" />


    <TextView
        android:layout_width="291dp"
        android:layout_height="128dp"
        android:layout_marginLeft="60sp"
        android:layout_marginTop="315sp"
        android:layout_marginRight="60sp"
        android:text="@string/configuraci_n"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="36sp" />


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="60sp"
        android:layout_marginTop="390sp"
        android:layout_marginRight="60sp"
        android:text="@string/Usuario"
        android:textColor="@color/black"
        android:textSize="25sp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="64dp"
        android:layout_marginLeft="60sp"
        android:layout_marginTop="455sp"
        android:layout_marginRight="60sp"
        android:text="@string/cambiar_contrase_a"
        android:textColor="@color/black"
        android:textSize="25sp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="64dp"
        android:layout_marginLeft="60sp"
        android:layout_marginTop="519sp"
        android:layout_marginRight="60sp"
        android:text="@string/notificaciones"
        android:textColor="@color/black"
        android:textSize="25sp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="64dp"
        android:layout_marginLeft="60sp"
        android:layout_marginTop="580sp"
        android:layout_marginRight="60sp"
        android:text="@string/cerrar_sesi_n"
        android:textColor="@color/rojo"
        android:textSize="25sp" />

</FrameLayout>