<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/fondo"
    tools:context=".vistaCuentaFragment">


    <ImageView
        android:layout_width="308dp"
        android:layout_height="314dp"
        android:layout_marginStart="50sp"
        android:src="@drawable/ic_user" />


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="60sp"
        android:layout_marginRight="60sp"
        android:textSize="36sp"
        android:layout_marginTop="314sp"
        android:text="@string/xxxxxxxxxxxx"
        android:textAlignment="center"
        android:textColor="@color/black" />


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="60sp"
        android:layout_marginTop="390sp"
        android:layout_marginRight="60sp"
        android:text="@string/Usuario"
        android:textColor="@color/black"
        android:textSize="25sp" />


    <TextView
        android:layout_width="match_parent"
        android:layout_height="64dp"
        android:layout_marginLeft="60sp"
        android:layout_marginTop="455sp"
        android:layout_marginRight="60sp"
        android:text="@string/sitio_web"
        android:textColor="@color/black"
        android:textSize="25sp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="76dp"
        android:layout_marginLeft="60sp"
        android:layout_marginTop="519sp"
        android:layout_marginRight="60sp"
        android:text="@string/informaci_n"
        android:textColor="@color/black"
        android:textSize="25sp" />

</FrameLayout>