<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/fondo"
    tools:context=".vistaLucesFragment">


    <ImageView
        android:layout_width="308dp"
        android:layout_height="314dp"
        android:layout_marginStart="50sp"
        android:src="@drawable/ic_luz" />
        />


    <TextView
        android:layout_width="match_parent"
        android:layout_height="64dp"
        android:layout_marginLeft="60sp"
        android:layout_marginTop="355sp"
        android:layout_marginRight="60sp"
        android:text="@string/configura_tus_luces"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="25sp" />


    <Button
        android:id="@+id/btnAddlight"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="60dp"
        android:layout_marginTop="455dp"
        android:layout_marginRight="60dp"
        android:text="@string/agregar_luz"
        android:textAllCaps="true"
        android:textSize="20sp" />


    <Button
        android:id="@+id/btnRemoveLight"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="60dp"
        android:layout_marginTop="535dp"
        android:layout_marginRight="60dp"
        android:text="@string/quitar_luz"
        android:textAllCaps="true"
        android:textSize="20sp" />


</FrameLayout>